--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -17,7 +17,7 @@
 \begin{document}
 
 \begin{center}
-\huge{\textbf{POO - TD6 : Lien \og est-un \fg ou \og a-un \fg}}
+\huge{\textbf{Gestion d’erreurs du paquetage tec}}
 \end{center}
 
 \begin{flushleft}
