--- a/trunk/rapport/rapport.tex
+++ b/trunk/rapport/rapport.tex
@@ -21,10 +21,8 @@
 \end{center}
 
 \begin{flushleft}
-\emph{\'Equipe \og Optiplex \fg composée de : Yannick Levif, Joffrey Diebold, Mohamed Akdim, Jérôme Le Bot}
+\emph{\'Equipe Optiplex \\ Yannick Levif, Joffrey Diebold, Mohamed Akdim, Jérôme Le Bot}
 \end{flushleft}
-
-\input{partie1.tex}
-\input{partie2.tex}
-
+\section{Gestion d’erreurs et instanciation}
+\subsection{Lever une exception}
 \end{document}
